--- a/index.html
+++ b/index.html
@@ -176,11 +176,11 @@
     </div>
     <!--Jquery JS-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-  <!--bootstrap-->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+    <!--bootstrap-->
+    <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>-->
     <!--Slick JS-->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
 		<!--local JS-->
-    <script src="resources/js/main.js"></script>
+    <script type="text/javascript" src="resources/js/main.js"></script>
   </body>
 </html>
