--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             Northern Italy through beautiful cinematography and narration.
           </p>
         </div>
-        <div class="col-xs-6 col-md-3">
+        <div class="col-xs-6 col-md-3 categories">
           <h3>Product Categories</h3>
           <ul>
             <li>Art</li>
@@ -176,8 +176,6 @@
     </div>
     <!--Jquery JS-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-    <!--bootstrap-->
-    <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>-->
     <!--Slick JS-->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
 		<!--local JS-->
